--- a/eliza/index.html
+++ b/eliza/index.html
@@ -115,7 +115,7 @@
                     </li>
                 </ul>
                 <p style="font-style: italic;">NOTE: These merchant tiles have been chosen randomly. If you don't like the setup try starting a new game and you'll get a new random setup!</p>
-                <p>3) Setup a deck for a normal {{ numberOfPlayers }}-player game. <span v-if="numberOfPlayers == '2'">Take <em>half</em> of the cards (20 cards)</span><span v-if="numberOfPlayers == '3'">Take <em>one third</em> of the cards (18 cards)</span>, and leave the rest out of the game for now. Deal yourself 8 cards and place the remaining <span v-if="numberOfPlayers == '2'">12</span><span v-if="numberOfPlayers == '3'">10</span> cards on the board.</p>
+                <p>3) Setup a deck for a normal {{ numberOfPlayers }}-player game. <span v-if="numberOfPlayers == '2'">Take <em>half</em> of the cards (20 cards)</span><span v-if="numberOfPlayers == '3'">Take <em>one third</em> of the cards (18 cards)</span>, and leave the rest out of the game for now. Deal yourself 8 cards, then deal one card to start your discard pile, then place the remaining <span v-if="numberOfPlayers == '2'">11</span><span v-if="numberOfPlayers == '3'">9</span> cards on the board.</p>
                 <p>4) For the first round of the game, remember to discard one card from your 8 first, as you only get one action in Round 1.</p>
                 <p>5) Place Eliza's tiles (use Light Grayish Blue tiles) next to the board. You may setup a player board for her if you wish, but it is not necessary. Eliza does not use Level 1 industries nor Level 2 manufactured goods. These are all considered already developed.</p>
                 <p v-if="numberOfPlayers == '3'">6) Place Eleanor's tiles (use Yellow tiles) next to the board. You may setup a player board for her if you wish, but it is not necessary. Eleanor does not use Level 1 industries nor Level 2 manufactured goods. These are all considered already developed.</p>
@@ -350,7 +350,7 @@
                         Reshuffle your discard pile along with the cards you set aside during setup. <span v-if="numberOfPlayers == '2'">Again, take <em>half</em> of the cards (20 cards)</span><span v-if="numberOfPlayers == '3'">Again, take <em>one third</em> of the cards (18 cards)</span> to form your deck for this round.
                     </li>
                     <li class="action-desc">
-                        Deal yourself 8 cards, and place the remaining <span v-if="numberOfPlayers == '2'">12</span><span v-if="numberOfPlayers == '3'">10</span> cards on the board. Since you get two actions in the first round of the Rail Era, keep all 8 cards.
+                        Deal yourself 8 cards, and place the remaining <span v-if="numberOfPlayers == '2'">12</span><span v-if="numberOfPlayers == '3'">10</span> cards on the board. Since you get two actions in the first round of the Rail Era, you <em>don't</em> deal an extra card to start your discard pile. Your discard pile is initially empty.
                     </li>
                     <li class="action-desc">
                         Remember to receive (or pay) your income.
