--- a/mc/index.html
+++ b/mc/index.html
@@ -33,6 +33,7 @@
                     <li class="simple-list-item">The "Add From List" page also allows you to select your chosen modular content and aspect, which will further reduce the list.</li>
                     <li class="simple-list-item">You can quickly hide and show cards here on this main page, so you may wish to add all your allies and side schemes, then hide them so you can quickly show them as they come into play.</li>
                     <li class="simple-list-item">Tap the 'H' on a card after adding it to hide it. Hidden cards will appear at the bottom of this page.</li>
+                    <li class="simple-list-item">Once you begin your game, use the "Hide Heroes/Villains/Main Schemes" checkbox on the "Add From List" page since you  won't need those very often during a game.</li>
                 </ul>
             </section>
         </section>
