--- a/eliza/index.html
+++ b/eliza/index.html
@@ -84,7 +84,7 @@
                     <ul style="padding: 0 1rem;">
                         <li class="action-desc">For coal consumption, the AIs always behave as if they are connected to the coal market (they must be actually connected to move coal into the market).</li>
                         <li class="action-desc">
-                        The AIs do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt a free network action. They also earn extra VP under certain circumstances (the app will tell you).
+                        The AIs do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt two free network actions. They also earn extra VP under certain circumstances (the app will tell you).
                         </li>
                         <li class="action-desc">You play by normal rules, except <em>you cannot overbuild (the AIs can't either)</em>.</li>
                         <li class="action-desc">Removing industry tiles to pay for negative income is not currently supported.</li>
