--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
     <h1>Games With Tony<img src="images/cardsavatar.png" class="avatar" /></h1>
     <p style="margin-top: 1rem;">Welcome! Below you will find a list of my digital apps and physical variants for board gaming, mostly for solo play. Nothing to print, ever.</p>
     <h2>Online Helpers</h2>
-    <p><a href="/eliza">Brass: Birmingham Online Solo Opponents (beta)</a></p>
+    <p><a href="/eliza"><strong>Brass: Birmingham</strong> Online Solo Opponents (beta)</a></p>
     <p class="small">A complete solution for playing Brass: Birmingham solo, with no AI to learn! Simply tell the app what moves you are making and the app tells you what the AI does. Play a 2 or 3-player game!</p>
-    <p><a href="/kanbanev">Kanban EV Solo Helper</a></p>
+    <p><a href="/kanbanev"><strong>Kanban EV</strong> Solo Helper</a></p>
     <p class="small">Automates the brilliant solo mode for Kanban EV by Vital Lacerda and David Turczi.</p>
-    <p><a href="/onmars">On Mars: Pathfinder and Lacerda Solo Helper</a></p>
+    <p><a href="/onmars"><strong>On Mars</strong>: Pathfinder and Lacerda Solo Helper</a></p>
     <p class="small">Automates the official solo mode for On Mars by Vital Lacerda, and my own solo variant, Pathfinder.</p>
-    <p><a href="/mc">Marvel Champions: Digital Hit Points, Threat, Counters, and Status Cards</a></p>
+    <p><a href="/mc"><strong>Marvel Champions</strong>: Digital Hit Points, Threat, Counters, and Status Cards</a></p>
     <p class="small">A digital alternative to all the physical tokens and dials in Marvel Champions.</p>
-    <p><a href="/nemoswar">Nemo's War: Online Dice Roller</a></p>
+    <p><a href="/nemoswar"><strong>Nemo's War</strong>: Online Dice Roller</a></p>
     <p class="small">Dice roller for Nemo's War.</p>
-    <p><a href="/nemoswarcalc">Nemo's War: Score Calculator</a></p>
+    <p><a href="/nemoswarcalc"><strong>Nemo's War</strong>: Score Calculator</a></p>
     <p class="small">Score calculator for Nemo's War.</p>
+
     
     <h2>Solo Modes</h2>
     <p><a href="https://boardgamegeek.com/filepage/211160/pathfinder-unofficial-mars-solo-mode-w-curiosity-s">Pathfinder - An Unofficial On Mars Solo Mode (w/ Curiosity Solo Campaign)</a></p>
