--- a/eliza/index.html
+++ b/eliza/index.html
@@ -80,11 +80,17 @@
                     If you think the app is making a mistake, use the 'View Board State' link at the top of the app to compare your physical board with the app's.
                 </li>
                 <li class="action-desc">
-                    GAMEPLAY DIFFERENCES: 
+                    <strong>GAMEPLAY DIFFERENCES:</strong>
                     <ul style="padding: 0 1rem;">
+                        <li class="action-desc">The AIs take one of 3 actions: <ol>
+                            <li>"Build and Network" (as a single action).</li>
+                            <li>Sell.</li>
+                            <li>Two free network actions (if an AI tries to sell and cannot).</li>
+                        </ol>
+                        They also earn extra VP under certain circumstances (the app will tell you).</li>
                         <li class="action-desc">For coal consumption, the AIs always behave as if they are connected to the coal market (they must be actually connected to move coal into the market).</li>
                         <li class="action-desc">
-                        The AIs do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt two free network actions. They also earn extra VP under certain circumstances (the app will tell you).
+                        The AIs do not require beer to sell, but they will consume it if they can.
                         </li>
                         <li class="action-desc">You play by normal rules, except <em>you cannot overbuild (the AIs can't either)</em>.</li>
                         <li class="action-desc">Removing industry tiles to pay for negative income is not currently supported.</li>
