Airplane mode reminder

--- a/eliza/index.html
+++ b/eliza/index.html
@@ -80,6 +80,9 @@
                     If you think the app is making a mistake, use the 'View Board State' link at the top of the app to compare your physical board with the app's.
                 </li>
                 <li class="action-desc">
+                    If you load the app in your device's browser the app will work and save if you turn on airplane mode (some may want to do this to avoid interruption). You will need to an internet connection to refresh the page however. 
+                </li>
+                <li class="action-desc">
                     <strong>GAMEPLAY DIFFERENCES:</strong>
                     <ul style="padding: 0 1rem;">
                         <li class="action-desc">The AIs take one of 3 actions: <ol>
